Added Dockerfile Commands.
Per RunDeck Installation Instructions.